--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<p>
 		This is my website, where I will present my art work. Reach me at my <a href="mailto:maribel.gomez001@stu.bmcc.cuny.edu"  title="Maribel's email">email</a>.</p>
 		&emsp; 
-		
+		<img src="Maribel_GifAnimation.gif" alt="greeting" width="500px" height="300px"/>
 	<p>Copyright © 2021 Maribel Gomez- All Rights Reserved</p>
     </body>
 </head>
