--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 			<a	href="gallery.html"> GALLERY	</a>
 		</h2>
 	<h1>Maribel's Homepage</h1>
+<div>
 	<p>
 		This is my website, where I will present my art work. Reach me at my <a href="mailto:maribel.gomez001@stu.bmcc.cuny.edu"  title="Maribel's email">email</a>.</p>
 		&emsp; 
-		<img src="Maribel_GifAnimation.gif" alt="greeting" width="500px" height="300px"/>
-	<p>Copyright © 2021 Maribel Gomez- All Rights Reserved</p>
+
+		<img src="images/Maribel_GifAnimation.gif" alt="greeting" width="600px" height="400px"/>
+	<h4>Copyright © 2022 Maribel Gomez- All Rights Reserved</h4>
     </body>
+</div>
 </head>
 </html>
