--- a/aboutme.html
+++ b/aboutme.html
@@ -14,9 +14,12 @@
 		<a	href="gallery.html"> GALLERY</a>
 	</h2>
 	<h1 align="center">About Maribel</h1>
+	<div>
 	<p>
 		I was born and raised in New York City. I graduated from Information Technology High School. And right now, I'm currently majoring in Video Arts and Technology at BMCC.
 	</p>
 		<img src="images/FallSeasonMaribel.jpg" alt="a selfie" width="400px"/>
+	
+	</div>
 </body>
 </html>
