--- a/gallery.html
+++ b/gallery.html
@@ -36,5 +36,9 @@
 	<audio controls>
 	<source src="Maribel_Gomez-AUDIO.mp3" type="audio/mpeg"></audio>
 </div>
+<div>
+	<h3>Suicide Prevention Website</h3>
+	<p>Website link <a href="mailto:https://maribelgomez001.github.io/Suicide-Prevention/"  title="link">here</a>.</p>
+</div>
 </body>
 </html>
