--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
 </div>
 <div>
 	<h3>Suicide Prevention Website</h3>
-	<p>Website link <a href="mailto:https://maribelgomez001.github.io/Suicide-Prevention/"  title="link">here</a>.</p>
+	<p>Website link <a href="https://maribelgomez001.github.io/Suicide-Prevention/"  title="link">here</a>.</p>
 </div>
 </body>
 </html>
