--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,13 @@
 	<source src="Maribel_Gomez-AUDIO.mp3" type="audio/mpeg"></audio>
 </div>
 <div>
+	<h3 align="center">GIF Animation</h3>
+	<p>
+		What makes the animation funny is that everything appears innocent and cute until the candy falls down and spells out a different word. As I was thinking of what to do, I was thinking about using a rabbit but didn't know what to do with it at first, and I then thought of adding it to my website homepage as a greeting. I did everything in Illustrator and animated the rest in Photoshop.
+	</p>
+	<img src="images/Maribel_GifAnimation.gif" alt="greeting" width="600px" height="400px"/>	
+</div>
+<div>
 	<h3>Suicide Prevention Website</h3>
 	<p>Website link <a href="https://maribelgomez001.github.io/Suicide-Prevention/"  title="link">here</a>.</p>
 </div>
