--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
 	<p>
 		What makes the animation funny is that everything appears innocent and cute until the candy falls down and spells out a different word. As I was thinking of what to do, I was thinking about using a rabbit but didn't know what to do with it at first, and I then thought of adding it to my website homepage as a greeting. I did everything in Illustrator and animated the rest in Photoshop.
 	</p>
-	<img src="images/Maribel_GifAnimation.gif" alt="greeting" width="600px" height="400px"/>	
+	<img src="images/Maribel_GifAnimation.gif" alt="greeting" width="500px"/>	
 </div>
 <div>
 	<h3>Suicide Prevention Website</h3>
