--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		This is my website, where I will present my art work. Reach me at my <a href="mailto:maribel.gomez001@stu.bmcc.cuny.edu"  title="Maribel's email">email</a>.</p>
 		&emsp; 
 
-		<img src="images/Maribel_GifAnimation.gif" alt="greeting" width="600px" height="400px"/>
+		<img src="images/Maribel_GifAnimation.gif" alt="greeting" width="500px"/>
 	<h4>Copyright © 2022 Maribel Gomez- All Rights Reserved</h4>
     </body>
 </div>
