--- a/gallery.html
+++ b/gallery.html
@@ -45,7 +45,7 @@
 </div>
 <div>
 	<h3>Suicide Prevention Website</h3>
-	<p>Website link <a href="https://maribelgomez001.github.io/Suicide-Prevention/"  title="link">here</a>.</p>
+	<p>Website link <a href="https://maribelgomez001.github.io/Suicide-Prevention/index.html"  title="link" target="_blank">here</a>.</p>
 </div>
 </body>
 </html>
