--- a/gallery.html
+++ b/gallery.html
@@ -44,6 +44,10 @@
 	<img src="images/Maribel_GifAnimation.gif" alt="greeting" width="500px"/>	
 </div>
 <div>
+	<h3>p5* Sketch</h3>
+	<center><iframe src="https://editor.p5js.org/MaribelGomez/full/0ICcZsUUo" width="600px" height="400px"></iframe></center>
+</div>
+<div>
 	<h3>Suicide Prevention Website</h3>
 	<p>Website link <a href="https://maribelgomez001.github.io/Suicide-Prevention/index.html"  title="link" target="_blank">here</a>.</p>
 </div>
