--- a/gallery.html
+++ b/gallery.html
@@ -51,5 +51,13 @@
 	<h3>Suicide Prevention Website</h3>
 	<p>Website link <a href="https://maribelgomez001.github.io/Suicide-Prevention/index.html"  title="link" target="_blank">here</a>.</p>
 </div>
+<div>
+	<h3>Converse Logo</h3>
+	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/xq_j6rHqRGM?si=5tJwlpUnfVK_8484" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>.</p>
+</div>
+<div>
+	<h3>Countdown Animation</h3>
+	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/PO78_5C00Ck?si=MtxqNs9pGVR4Y3EZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+</div>	
 </body>
 </html>
