--- a/gallery.html
+++ b/gallery.html
@@ -56,12 +56,12 @@
 	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/xq_j6rHqRGM?si=5tJwlpUnfVK_8484" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>.</p>
 </div>
 <div>
-	<h3>Futuristic User Iinterface Animation</h3>
+	<h3>Countdown Animation</h3>
 	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/PO78_5C00Ck?si=MtxqNs9pGVR4Y3EZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 </div>	
 <div>
-	<h3>Countdown Animation</h3>
-	<p>https://youtu.be/t4zU8j6CFcg</p>
+	<h3>Futuristic User Iinterface Animation</h3>
+	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/t4zU8j6CFcg?si=BqHwlA_TGPEvBKKE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 </div>	
 </body>
 </html>
