--- a/gallery.html
+++ b/gallery.html
@@ -68,5 +68,13 @@
 	<p>I was inspired by Stranger Things (2016) to create this opening title. I wanted it to give off a bit of a scary and grim feeling as people watched it. The obvious change is the name of the title, which I made up. The main colors I used were red for the text and black for the background. The effects I used for the text were fractal noise, added gain, and glow. The most difficult part of creating this was envisioning the animation for each word. I don't want to completely follow the same animation of Stranger Things, yet I still wanted it to give off the same energy. So, I played around with the animation till I was satisfied with it.</p>
 	<center><iframe width="560" height="315" src="https://www.youtube.com/embed/vufrLwD87SM?si=qpzZvp3JCkugQwg8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
 </div>
+<div>
+	<h3>Holiday eCard</h3>
+	<center><iframe width="560" height="315" src="https://www.youtube.com/embed/QTWq3UmFPfs?si=dFEGFwk8kP6MP-u_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></iframe></center>
+</div>
+<div>
+	<h3>Parallax FX</h3>
+	<center><iframe width="560" height="315" src="https://www.youtube.com/embed/FaL4V-s-2eU?si=KuA5ybof1uCtytro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></iframe></center>
+</div>	
 </body>
 </html>
