--- a/gallery.html
+++ b/gallery.html
@@ -86,7 +86,12 @@
 </div>
 <div>
 	<h3>Air Pollution PSA</h3>
-	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/hKjIKzOtSSQ?si=yO7IBReK-8pgdnRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+	<center><iframe width="560" height="315" src="https://www.youtube.com/embed/hKjIKzOtSSQ?si=yO7IBReK-8pgdnRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
+</div>
+<div>
+	<h3>Final Demon Reel</h3>
+	<p>A series of works I created in my ANI 301 class. My work includes a greenscreen project, air pollution PSA, title sequence, futuristic user interface, Converse logo, and Parallax FX. In the introduction, I animated my name by using blur and scale. Add my contract information.</p>
+	<center><iframe width="560" height="315" src="https://www.youtube.com/embed/vR7KeALGEe4?si=uu5qy-EPkICPyBXw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
 </div>
 </body>
 </html>
